--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -4,3 +4,12 @@
   align-items: center;
   flex-flow: column;
 }
+
+.container {
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+.postContainer {
+  text-align: left;
+}
